--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@flaticon/flaticon-uicons": "^3.3.1",
     "@tailwindcss/vite": "^4.1.8",
     "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.2",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
