--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.3.1",
     "@tailwindcss/vite": "^4.1.8",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.2",
+    "react-syntax-highlighter": "^15.6.1",
     "tailwindcss": "^4.1.8",
     "tslib": "^2.8.1"
   },
